--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -15,5 +15,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+      - name: List installations
       - run: pip3 list
       
