is this indentation really enough to mess all this up

--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
     uses: actions/setup-python@v2
     with:
-      python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python-version }}
     - name: List installations
-    - run: pip3 list
+    - run: |
+        python -m pip list
       
