--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: List installations
-    - run: |
+      run: |
         python -m pip list
       
